--- a/css/index.css
+++ b/css/index.css
@@ -1,19 +1,32 @@
+html{
+	overflow-x: hidden;
+}
+
+body{
+	margin: 0;
+	height: 0;
+}
+
+.Unicorn{
+	animation: rollInUnicorn 2s linear 1 forwards running;
+}
+
 .Hero-Container{
-	position: absolute;
+	position: relative;
 	top: 0;
 	left: 10%;
 	width: 90%;
 	height: 300px;
 	box-shadow: 0px 4px 9px -4px rgba(157, 168, 190, 0.5);
 	background: white;
-	z-index: 1;
+	z-index: -4;
 }
 
 
 .Hero-NavBar{
-	position: absolute;
+	position: relative;
 	width: 300px;
-	right: 20px;
+	left: 60%;
 	top: 20px;
 	display: flex;
 	justify-content: space-around;
@@ -30,6 +43,11 @@
 	color: #1A1A4C;
 }
 
+.Hero-Unicorn{
+	display: none;
+	padding-left: 20px;
+}
+
 .Hero-Title{
 	font-family: 'Dosis', 'sans-serif';
 	font-style: normal;
@@ -39,25 +57,34 @@
 	color: #1A1A4C;
 	width: fit-content;
 	padding: 10px;
+	padding-left: 80px;
+	margin-top: 10px;
 }
 
-.Hero-Image-Container {
-	background-color: #E92042;
-	border-radius: 10px;
-	height: 300px;
-	width: 300px;
-	text-align: center;
-	box-shadow: 0px 4px 8px rgba(157, 168, 190, 0.5);
+.Hero-Image-Wrapper-Container{
 	position: relative;
 	left: 60%;
 	top: -150px;
+	height: 300px;
+	width: 300px;
+}
+
+.Hero-Image-Container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #E92042;
+	height: 0;
+	width: 0;
+	border-radius: 10px;
+	text-align: center;
+	box-shadow: 0px 4px 8px rgba(157, 168, 190, 0.5);
 	z-index: 4;
+	animation: rollInImageContainer 2s linear 1 1s forwards running;
 }
 
 .Hero-Image-Container img {
-	position: relative;
-	top: 50%;
-	transform: translateY(-50%);
+	animation: rollInImage 2s linear 1 1s forwards running;
 }
 
 .Sidebar{
@@ -99,12 +126,12 @@
 .UnderHero{
 	position: relative;
 	display: grid;
-	top: 300px;
+	/* top: 300px; */
 	background-color: #F7FCFF;
 	width: fit-content;
-	width: 90.9%;
-	padding: 0 0 0 9.8%;
-	z-index: -1;
+	width: inherit;
+	margin-left:9.8%;
+	z-index: -6;
 }
 
 .Habilidades-Card{
@@ -119,6 +146,13 @@
 	background-color: #FFFFFF;
 }
 
+.Habilidades-Card-Image{
+	align-self: center;
+}
+
+.Habilidades-Card-Text{
+	position: inherit;
+}
 
 .Habilidades-Card-Title{
 	margin: 0;
@@ -147,17 +181,24 @@
 	left: 10%;
 }
 
-.Cohete{
+.Cohete-Container{
 	width: 180px;
-	margin-left: 70%
+	margin-left: 70%;
 }
+
+.Cohete{
+	animation: rollRocket 5s cubic-bezier(.88, .44, .71, 1) alternate infinite forwards;
+	width: 100%;
+}
+
 
 .About {
 	width: 460px;
 	margin: 20px;
-	margin-left: 40px;
 	position: relative;
-	top: -100px;
+	top: -200px;
+	height: 160px;
+	left: 40px;
 }
 
 .About-Title{
@@ -200,7 +241,7 @@
 	grid-template-columns: 49% 49%;
 }
 
-.Proyects-Title {
+.Proyects-Title-Container {
 	font-family: Dosis;
 	font-style: normal;
 	font-weight: bold;
@@ -209,21 +250,21 @@
 	text-align: center;
 	color: #1A1A4C;
 	margin-top: 0;
+	width: 100%;
+	margin: 0;
 }
 .Proyects-Card{
 	border-radius: 8px;
-	padding: 40px;
-	padding-left: 60px;
+	padding: 35px;
 	width: 75%;
 }
 
 .Proyects-Card-Image{
-	width: 100%;
+	width: 99%;
 }
 
 footer{
-	position: absolute;
-	bottom: -1000px;
+	position: relative;
 	background-color: #E92042;
 	text-align: center;
 	width: 100%;
@@ -234,8 +275,222 @@ footer{
 	font-style: normal;
 	font-weight: normal;
 	font-size: 17px;
+	margin: 0;
 }
 footer a{
 	text-decoration: none;
 	color: #1A1A4C;
+}
+footer p{
+	padding: 10px;
+	margin: 0;
+}
+
+@media screen and (max-width: 900px) {
+	.Sidebar-Container {
+		display: none;
+	}
+	.Hero-Container{
+		left: 0;
+		width: 100%;
+	}
+	.Hero-Unicorn{
+		display: inline;
+		padding-top: 1%;
+		/* width: 10%; */
+	}
+	.Hero-Title{
+		padding-top: 0;
+		padding-left: 30px;
+	}
+	.UnderHero{
+		width: 100%;
+		margin-left: 0;
+	}
+	.Habilidades-Card{
+		width: fit-content;
+	}
+}
+
+@media screen and (max-width: 768px){
+	.Hero-Image-Wrapper-Container{
+		width: 200px;
+		height: 200px;
+		right: 20%;
+	}
+	.About{
+		top: -120px;
+		height: 210px;
+		margin-left: 10%;
+		margin-right: 10%;
+	}
+	.About-Card{
+		width: 100%
+	}
+	.Cohete-Container{
+		width: 140px;
+		margin-left: 60%
+	}
+	.Proyects-Cards-Container{
+		grid-template-columns: 100%;
+		grid-template-rows: 50% 50%;
+	}
+	.Proyects-Card{
+		padding-right: 0;
+	}
+	.Hero-NavBar{
+		left: 50%;
+	}
+}
+@media screen and (max-width: 600px){
+	.Hero-Container{
+		height: 350px;
+	}
+
+	.Hero-Title{
+		font-size: 60px;
+		word-spacing: 5em;
+		width: 300px;
+	}
+
+	.Hero-Image-Wrapper-Container{
+		top: -300px;
+	}
+
+	.About{
+		margin: 0;
+		left: 20px;
+		width: 90%;
+	}
+	.About-Card{
+		width: 90%;
+	}
+	.Hero-NavBar {
+		left: 40%;
+	}
+}
+
+@media screen and (max-width: 500px){
+	.Hero-Image-Wrapper-Container{
+		width: 150px;
+		height: 150px;
+		left: 60%;
+	}
+
+	.Cohete{
+		width: 100px;
+		height: 100px;
+	}
+
+	.Habilidades-Card{
+		width: 80%;
+		margin-left: 20px;
+	}
+
+	.Habilidades-Card-Text {
+		right: 0;
+	}
+
+	.Habilidades-Card-Diseño{
+		left: 0;
+	}
+	.Proyects{
+		margin-top: 50px;
+	}
+	.Hero-NavBar {
+		left: 30%;
+	}
+}
+
+@media screen and (max-width: 425px){
+	.Hero-NavBar {
+		width: 230px;
+		left: 25%;
+		justify-content: space-between;
+	}
+	.Hero-Image-Wrapper-Container{
+		width: 100px;
+		height: 100px;
+		top: -220px;
+	}
+	.Habilidades-Card{
+		width: auto;
+	}
+	.Cohete{
+		width: 70px;
+		height: 70px;
+	}
+	.Cohete-Container{
+		width: 70px;
+		height: 70px;
+		margin-left: 70%;
+	}
+	.About-Card{
+		width: 80%;
+	}
+	.Proyects{
+		margin-top: 70px;
+	}
+	.Proyects-Title-Container{
+		font-size: 40px;
+	}
+}
+@media screen and (max-width: 320px){
+	.Hero-Title{
+		width: auto;
+	}
+	.Habilidades{
+		display: grid;
+	}
+}
+
+@keyframes rollInUnicorn {
+	from{
+		transform: rotate(0);
+		width: 0;
+		height: 0;
+	}
+	to{
+		transform: rotate(360deg);
+		width: 65px;
+		height: 65px;
+	}
+}
+
+@keyframes rollInImageContainer{
+	from {
+		transform: rotate(0);
+		width: 0;
+		height: 0;
+	}
+
+	to {
+		transform: rotate(360deg);
+		width: 100%;
+		height: 100%;
+	}
+}
+
+@keyframes rollInImage {
+	from {
+		transform: rotate(0);
+		width: 0;
+		height: 0;
+	}
+
+	to {
+		transform: rotate(360deg);
+		width: 96px;
+		height: 96px;
+	}
+}
+
+@keyframes rollRocket{
+	from{
+		transform: rotate(0)
+	}
+
+	to{
+		transform: rotate(360deg)
+	}
 }
